# MPP

./: .gitignore  README.md  README.zh-CN.md  commit_message.txt  lefthook.yml
.agents/: principle.md  setup.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
ai-service/: .dockerignore  Dockerfile  contract_schemas.py  llm_client.py  main.py  observability.py  prompts.py  pyproject.toml  routes.py  schemas.py
ai-service/tests/: test_llm_client.py  test_observability.py  test_routes.py
backend/: .dockerignore  Dockerfile  go.mod  go.sum
browser-worker/: Dockerfile  docker.go  filter.go  filter_test.go  go.mod  go.sum  health_test.go  interceptor.go  main.go  redis_state.go
browser-worker/runtime/: Dockerfile  entrypoint.sh  proxy.py
contracts/: README.md  generate.sh  openapi.yaml
doc/: WeChat_Publish_Opt_Plan.md  ai-editing-streaming-workflow.md  api_dashboard.md  database-query-governance.md  high-concurrency-distributed-architecture-plan.md  init_db.sql  mock_data.sql  module-design.md  plantform.md  platform-draft-format-plan.md  publishing_guide.md  remote_browser_session.md  setup.md  tech-stack.md  topic.md  x-oauth2-client.md
docker/: .env.deploy.example  .env.dev.example  .env.example  docker-compose.dev.yml  docker-compose.yml
extension/: .oxfmtrc.json  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/entrypoints/: background.ts  (+6 more)
frontend/: .dockerignore  .oxfmtrc.json  Dockerfile  next.config.test.ts  next.config.ts  package.json  pnpm-lock.yaml
(+341 files in other folders)
