[project]
name = "ai-service"
version = "0.1.0"
description = "AI Agent Service for multi-platform-poster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=0.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.15.14",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
